--- a/src/components/bwc-button/bwc-button.html
+++ b/src/components/bwc-button/bwc-button.html
@@ -1,1 +1,11 @@
-<bwc-button text="Everyone">Button text!</bwc-button>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>bwc-button - Bulmer Web Components</title>
+		<script type="module" src="./bwc-button.js"></script>
+	</head>
+
+	<body>
+		<bwc-button text="Everyone">Button text!</bwc-button>
+	</body>
+</html>
