Added gulp build for sass, this is to include deps from the bulma src. Also added use-cases for, and updated the functionality for the button. Some use-cases still missing, but there are problems with the bulma project structure preventing better integrations.

--- a/src/components/bwc-button/bwc-button.html
+++ b/src/components/bwc-button/bwc-button.html
@@ -5,7 +5,80 @@
 		<script type="module" src="./bwc-button.js"></script>
 	</head>
 
-	<body>
-		<bwc-button text="Everyone">Button text!</bwc-button>
+	<body class="is-family-primary">
+		<section>
+			<h3>Button</h3>
+
+			<bwc-button>Default</bwc-button>
+
+			<div>
+				<code>
+					&lt;bwc-button&gt;Default&lt;/bwc-button&gt;
+				</code>
+			</div>
+		</section>
+
+		<section>
+			<h3>Color status</h3>
+
+			<bwc-button color="primary">Primary</bwc-button>
+			<bwc-button color="link">link</bwc-button>
+			<bwc-button color="info">Info</bwc-button>
+			<bwc-button color="success">Success</bwc-button>
+			<bwc-button color="warning">Warning</bwc-button>
+			<bwc-button color="danger">Danger</bwc-button>
+
+			<div>
+				<code>
+					&lt;bwc-button color="primary"&gt;Primary&lt;/bwc-button&gt;<br>
+					&lt;bwc-button color="link"&gt;link&lt;/bwc-button&gt;<br>
+					&lt;bwc-button color="info"&gt;Info&lt;/bwc-button&gt;<br>
+					&lt;bwc-button color="success"&gt;Success&lt;/bwc-button&gt;<br>
+					&lt;bwc-button color="warning"&gt;Warning&lt;/bwc-button&gt;<br>
+					&lt;bwc-button color="danger"&gt;Danger&lt;/bwc-button&gt;
+				</code>
+			</div>
+		</section>
+
+		<section>
+			<h3>Specific Colors</h3>
+
+			<bwc-button color="white">White</bwc-button>
+			<bwc-button color="light">Light</bwc-button>
+			<bwc-button color="dark">Dark</bwc-button>
+			<bwc-button color="black">Black</bwc-button>
+			<bwc-button color="text">Text</bwc-button>
+
+			<div>
+				<code>
+					&lt;bwc-button color="white"&gt;White&lt;/bwc-button&gt;<br>
+					&lt;bwc-button color="light"&gt;Light&lt;/bwc-button&gt;<br>
+					&lt;bwc-button color="dark"&gt;Dark&lt;/bwc-button&gt;<br>
+					&lt;bwc-button color="black"&gt;Black&lt;/bwc-button&gt;<br>
+					&lt;bwc-button color="text"&gt;Text&lt;/bwc-button&gt;
+				</code>
+			</div>
+		</section>
+
+		<section>
+			<h3>Sizes</h3>
+
+			<bwc-button size="small">Small</bwc-button>
+			<bwc-button >Default</bwc-button>
+			<bwc-button size="normal">Normal</bwc-button>
+			<bwc-button size="medium">Medium</bwc-button>
+			<bwc-button size="large">Large</bwc-button>
+
+			<div>
+				<code>
+					&lt;bwc-button color="primary"&gt;Primary&lt;/bwc-button&gt;<br>
+					&lt;bwc-button color="link"&gt;link&lt;/bwc-button&gt;<br>
+					&lt;bwc-button color="info"&gt;Info&lt;/bwc-button&gt;<br>
+					&lt;bwc-button color="success"&gt;Success&lt;/bwc-button&gt;<br>
+					&lt;bwc-button color="warning"&gt;Warning&lt;/bwc-button&gt;<br>
+					&lt;bwc-button color="danger"&gt;Danger&lt;/bwc-button&gt;
+				</code>
+			</div>
+		</section>
 	</body>
 </html>
